#pragma once
#include <ren/font.hpp>
#include <ren/shader.hpp>
#include <ren/texture.hpp>
#include <ren/material.hpp>
#include <ren/mesh.hpp>
#include <util.hpp>
#include <map>
#include <string>
#include <string_view>

namespace ren {

	class RenderAssetManager {

	public:
		void initFromConfig(std::string_view fileName);

		Shader& createShader(const std::string& name);
		Texture& createTexture(const std::string& name);
		Material& createMaterial(const std::string& name);
		Mesh& createMesh(const std::string& name);
		Font& createFont(const std::string& name);

		void destroy();

		Shader& getShader(std::string_view name);
		Texture& getTexture(std::string_view name);
		Material& getMaterial(std::string_view name);
		Mesh& getMesh(std::string_view name);
		Font& getFont(std::string_view name);

	private:
		void stringToShader(const std::string& configLine);
		void stringToTexture(const std::string& configLine);
		void stringToMaterial(const std::string& configLine1, const std::string& configLine2);
		void stringToFont(const std::string& configLine);

		std::map<std::string, Shader, std::less<>> shaders;
		std::map<std::string, Texture, std::less<>> textures;
		std::map<std::string, Material, std::less<>> materials;
		std::map<std::string, Mesh, std::less<>> meshes;
		std::map<std::string, Font, std::less<>> fonts;
	};
}
