@startuml
set separator ::

class ren::Glyph {
	+width: int
	+advance: int
	+uv: Vec4
}
hide Glyph methods

class ren::Font {
	+create(&texture, fileName, size, filtered)
	+destroy()
	..
	+getTexture() : &Texture
	+getGlyph(c) : Glyph
	+getSize() : int
	+getWidth() : int
	+getHeight() : int
	--
	-size: int
	-texture: Texture&
	-glyphs: Glyph[]
}

class ren::RenderAssetManager {
	+initFromConfig(fileName)
	..
	+createShader(name) : &Shader
	+createTexture(name) : &Texture
	+createMaterial(name) : &Material
	+createMesh(name) : &Mesh
	+createFont(name) : &Font
	+destroy()
	..
	+getShader(name) : &Shader
	+getTexture(name) : &Texture
	+getMaterial(name) : &Material
	+getMesh(name) : &Mesh
	+getFont(name) : &Font
	--
	-stringToShader(configLine)
	-stringToTexture(configLine)
	-stringToMaterial(configLine1, configLine2)
	-stringToFont(configLine)
	..
	-shaders: map<str, Shader>
	-textures: map<str, Texture>
	-materials: map<str, Material>
	-meshes: map<str, Mesh>
	-fonts: map<str, Font>
}

class ren::GUI {
	+create(&shader, &font, &mesh)
	+setFrame(left, right, bottom, top)
	..
	+addLabel(name) : &Label
	+getLabel(name) : &Label
	+removeLabel(name)
	..
	+display()
	--
	-updateMesh()
	..
	-shader: &Shader
	-font: &Font
	-mesh: &Mesh
	..
	-labels: map<str, Label>
	..
	-needsUpdate: bool
}

enum ren::TextAlign {
	Center
	Left
	Right
	Bottom
	Top
}
hide TextAlign methods

class ren::Label {
	+create(size, text, position, color, align)
	..
	+size: float
	+text: string
	+position: Vec3
	+color: Vec3
	+align: uint
}

Font <-- Glyph
RenderAssetManager *-down- Font

GUI <-left- RenderAssetManager
GUI *-down- Label

Label <-- TextAlign

@enduml
